--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -38,14 +38,27 @@
 
 
         </com.google.android.material.appbar.AppBarLayout>
+        <TextView
+            android:id="@+id/txtHeader"
+            android:layout_below="@+id/appBar"
+            android:layout_width="wrap_content"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginRight="@dimen/_16sdp"
 
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/_16sdp"/>
         <fragment
             android:id="@+id/activity_main_nav_host_fragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/bottomNavigationView"
-            android:layout_below="@+id/appBar"
+            android:layout_below="@+id/txtHeader"
             android:layout_weight="1"
             app:defaultNavHost="true"
             app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
