--- a/app/src/main/res/layout/fragment_posts.xml
+++ b/app/src/main/res/layout/fragment_posts.xml
@@ -8,42 +8,19 @@
     android:background="#fafafa"
     tools:context=".ui.posts.PostsFragment">
 
-    <TextView
-        android:id="@+id/txtHeader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="@dimen/_16sdp"
-        android:layout_marginTop="@dimen/_16sdp"
-        android:layout_marginRight="@dimen/_16sdp"
 
-        android:textColor="@android:color/black"
-        android:textSize="@dimen/_16sdp"/>
-
-    <TextView
-android:id="@+id/txtPostNear"
-        android:layout_below="@+id/txtHeader"
-        android:textColor="@android:color/black"
-        android:text="Posts in current location "
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="@dimen/_5sdp"
-
-
-        android:textSize="@dimen/_12sdp"></TextView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/txtPostNear"
+
         android:scrollbars="vertical" />
 
     <ProgressBar
-android:visibility="gone"
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 </RelativeLayout>
