--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+
     android:layout_height="match_parent"
-    android:background="@color/White"
+    android:background="#F1F1F1"
     android:orientation="vertical"
     tools:context=".ui.comments.CommentsActivity">
 
@@ -18,8 +19,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.Toolbar
+        <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
+            app:titleCentered="true"
+
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
@@ -30,33 +34,8 @@
             tools:layout_editor_absoluteY="0dp">
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
-                <TextView
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:text="@string/post_by"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="@dimen/_12sdp" />
-
-                <TextView
-                    android:id="@+id/txtName"
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-
-                    android:textColor="@color/DeepSkyBlue"
-                    android:textSize="@dimen/_12sdp" />
-
-
-            </LinearLayout>
-        </androidx.appcompat.widget.Toolbar>
+        </com.google.android.material.appbar.MaterialToolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
     <com.google.android.material.progressindicator.LinearProgressIndicator
@@ -67,130 +46,194 @@
 
         android:indeterminate="true"
         android:layout_height="wrap_content" />
-    <LinearLayout
 
-        android:id="@+id/lvMain"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:transitionName="shared_element_container"
         android:layout_below="@+id/appBar"
-        android:layout_margin="@dimen/_10sdp"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        app:cardCornerRadius="@dimen/_15sdp"
+        android:id="@+id/cardVIew"
+        android:layout_height="wrap_content"
 
-
-        <TextView
-            android:id="@+id/txtTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLines="4"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/_17sdp" />
+        android:layout_margin="@dimen/_5sdp"
+        app:elevation="@dimen/_10sdp">
 
         <LinearLayout
+            android:padding="@dimen/_8sdp"
+            android:background="?attr/selectableItemBackground"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imgpostType"
-                android:layout_width="@dimen/_10sdp"
-                android:layout_height="@dimen/_10sdp"
+                android:layout_width="@dimen/_13sdp"
+                android:layout_height="@dimen/_13sdp"
+                android:layout_gravity="right"
                 android:src="@drawable/roundicon"
                 app:tint="@android:color/holo_orange_dark" />
 
 
-            <TextView
-                android:id="@+id/txtDateTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_5sdp"
-
-                android:textColor="@android:color/darker_gray"
-                android:textSize="@dimen/_10sdp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:visibility="invisible"
-                android:id="@+id/txtDirectMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:text="@string/direct_message"
-                android:textColor="@color/Black"
-                android:textSize="@dimen/_12sdp" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="right"
-
+                android:gravity="center_vertical"
                 android:orientation="horizontal">
 
-                <info.androidhive.fontawesome.FontTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_20sdp"
-                    android:text="@string/fa_eye"
-                    android:textColor="@color/Teal"
-
-                    android:textSize="@dimen/_18sdp"
-                    app:solid_icon="true" />
+                <ImageView
+                    android:layout_width="@dimen/_40sdp"
+                    android:layout_height="@dimen/_40sdp"
+                    android:src="@drawable/ic_user" />
 
                 <TextView
-                    android:id="@+id/txtViews"
+
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:text="Posted By: "
 
                     android:textColor="@color/Black"
                     android:textSize="@dimen/_12sdp" />
 
-                <info.androidhive.fontawesome.FontTextView
-                    android:id="@+id/txtLike"
+                <TextView
+                    android:id="@+id/txtName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_20sdp"
-                    android:text="@string/fa_heart"
-                    android:textColor="@color/Gray"
-                    android:textSize="@dimen/_18sdp"
-                    app:solid_icon="true" />
-
-                <info.androidhive.fontawesome.FontTextView
-                    android:layout_width="wrap_content"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:capitalize="words"
+                    android:textColor="@color/Black"
+                    android:textSize="@dimen/_12sdp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:text="sqssss"
+                    android:gravity="right"
+                    android:id="@+id/txtDateTime"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_20sdp"
-                    android:text="@string/fa_share_alt_solid"
-                    android:textColor="@color/Green"
+                    android:layout_marginLeft="@dimen/_5sdp"
 
-                    android:textSize="@dimen/_18sdp"
-                    app:solid_icon="true" />
+                    android:textColor="@color/Black"
+                    android:textSize="@dimen/_10sdp" />
+
+
+
             </LinearLayout>
+
+            <TextView
+                android:layout_marginTop="@dimen/_5sdp"
+                android:id="@+id/txtTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_5sdp"
+
+                android:textColor="@color/Black"
+                android:textSize="@dimen/_12sdp" />
+            <ImageView
+                android:layout_marginTop="@dimen/_5sdp"
+                android:id="@+id/imgPost"
+                android:scaleType="fitXY"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_150sdp"
+                android:visibility="gone" />
+
+            <RelativeLayout
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <info.androidhive.fontawesome.FontTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:text="@string/fa_eye"
+                        android:textColor="@color/DarkOrange"
+
+                        android:textSize="@dimen/_18sdp"
+                        app:solid_icon="true" />
+
+                    <TextView
+                        android:id="@+id/txtViews"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="@dimen/_5sdp"
+
+                        android:textColor="@color/Black"
+                        android:textSize="@dimen/_12sdp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:orientation="horizontal">
+
+                    <info.androidhive.fontawesome.FontTextView
+                        android:id="@+id/txtLike"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_20sdp"
+                        android:text="@string/fa_heart"
+                        android:textColor="@color/Gray"
+                        android:textSize="@dimen/_18sdp"
+                        app:solid_icon="true" />
+
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:text="Like"
+                        android:textColor="@color/Black"
+                        android:textSize="@dimen/_12sdp" />
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_alignParentRight="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <info.androidhive.fontawesome.FontTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+
+                        android:text="@string/fa_share_alt_solid"
+                        android:textColor="@color/DarkGreen"
+
+                        android:textSize="@dimen/_18sdp"
+                        app:solid_icon="true" />
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:text="Share"
+                        android:textColor="@color/Black"
+                        android:textSize="@dimen/_12sdp" />
+                </LinearLayout>
+            </RelativeLayout>
 
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/txtLocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-
-            android:textColor="@android:color/darker_gray"
-            android:textSize="@dimen/_10sdp" />
-    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
-
+        android:layout_margin="@dimen/_5sdp"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/lvMain"
+        android:layout_below="@+id/cardVIew"
         android:layout_above="@+id/lvBottim"
         android:scrollbars="vertical" />
 
