--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -34,15 +34,18 @@
             <com.google.android.material.appbar.AppBarLayout
                 android:id="@+id/appBar"
                 android:layout_width="match_parent"
+                app:liftOnScroll="true"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <androidx.appcompat.widget.Toolbar
+                <com.google.android.material.appbar.MaterialToolbar
                     android:id="@+id/toolbar"
+                    app:titleCentered="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:layout_scrollFlags="scroll|enterAlways|snap"
                     android:background="?attr/colorPrimary"
                     android:minHeight="?attr/actionBarSize"
                     android:theme="?attr/actionBarTheme"
@@ -76,11 +79,11 @@
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:tint="@color/primarytext"
                             android:layout_width="@dimen/_30sdp"
                             android:layout_height="wrap_content"
                             android:layout_margin="@dimen/_10sdp"
-                            android:src="@drawable/ic_locationbg" />
+                            android:src="@drawable/ic_locationbg"
+                            app:tint="@color/primarytext" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -146,6 +149,7 @@ android:minLines="2"
                 android:id="@+id/bottomNavigationView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
                 android:layout_alignParentBottom="true"
                 android:layout_gravity="bottom"
 
