--- a/app/src/main/res/layout/recyclerview_posts_row.xml
+++ b/app/src/main/res/layout/recyclerview_posts_row.xml
@@ -9,20 +9,22 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-app:cardCornerRadius="@dimen/_15sdp"
+    android:id="@+id/cardView"
     android:layout_height="wrap_content"
-
     android:layout_margin="@dimen/_5sdp"
+    android:transitionName="shared_element_container"
+
+    app:cardCornerRadius="@dimen/_15sdp"
     app:elevation="@dimen/_10sdp">
 
     <LinearLayout
-        android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginLeft="@dimen/_10sdp"
-        android:layout_marginRight="@dimen/_10sdp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:orientation="vertical">
+        android:background="?attr/selectableItemBackground"
+        android:orientation="vertical"
+
+        android:padding="@dimen/_8sdp">
 
         <ImageView
             android:id="@+id/imgpostType"
@@ -59,55 +61,58 @@ app:cardCornerRadius="@dimen/_15sdp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_5sdp"
-android:capitalize="words"
+                android:capitalize="words"
                 android:textColor="@color/Black"
                 android:textSize="@dimen/_12sdp"
                 android:textStyle="bold" />
+
             <TextView
-                android:text="sqssss"
-                android:gravity="right"
                 android:id="@+id/txtDateTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_5sdp"
+                android:gravity="right"
+                android:text="sqssss"
 
                 android:textColor="@color/Black"
                 android:textSize="@dimen/_10sdp" />
 
 
-
         </LinearLayout>
 
         <TextView
-            android:layout_marginTop="@dimen/_5sdp"
             android:id="@+id/txtTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_5sdp"
 
             android:textColor="@color/Black"
             android:textSize="@dimen/_12sdp" />
+
         <ImageView
-            android:layout_marginTop="@dimen/_5sdp"
             android:id="@+id/imgPost"
-            android:scaleType="fitXY"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_150sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:scaleType="fitXY"
             android:visibility="gone" />
 
         <RelativeLayout
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginBottom="@dimen/_10sdp"
+
 
             android:orientation="horizontal">
+
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
                 <info.androidhive.fontawesome.FontTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -155,29 +160,31 @@ android:capitalize="words"
             </LinearLayout>
 
 
-          <LinearLayout
-              android:layout_alignParentRight="true"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content">
-              <info.androidhive.fontawesome.FontTextView
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true">
+
+                <info.androidhive.fontawesome.FontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
 
 
-                  android:text="@string/fa_share_alt_solid"
-                  android:textColor="@color/DarkGreen"
+                    android:text="@string/fa_share_alt_solid"
+                    android:textColor="@color/DarkGreen"
 
-                  android:textSize="@dimen/_18sdp"
-                  app:solid_icon="true" />
-              <TextView
+                    android:textSize="@dimen/_18sdp"
+                    app:solid_icon="true" />
 
-                  android:layout_width="wrap_content"
-                  android:layout_height="match_parent"
-                  android:layout_marginLeft="@dimen/_5sdp"
-                  android:text="Share"
-                  android:textColor="@color/Black"
-                  android:textSize="@dimen/_12sdp" />
-          </LinearLayout>
+                <TextView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:text="Share"
+                    android:textColor="@color/Black"
+                    android:textSize="@dimen/_12sdp" />
+            </LinearLayout>
         </RelativeLayout>
 
         <LinearLayout
@@ -192,10 +199,10 @@ android:capitalize="words"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_5sdp"
-                android:textStyle="bold"
-android:text="Featured Tags"
+                android:text="Featured Tags"
                 android:textColor="@color/Black"
-                android:textSize="@dimen/_12sdp" />
+                android:textSize="@dimen/_12sdp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:id="@+id/lvSubCategory"
